# C_CPP_Code_Creation

./: README.md  evenodd.cpp  find area and peimeter in c++  find-permutation.cpp  malloc.cpp  pointer45.cpp  proandloss2.cc  roman-number.cpp  simpleinterest.cpp  triangleoop23.cpp
ATM-Simulator/: ATM-Simulator.cpp
Banking-System-Simulation/: Banking-System-Simulation.cpp
Internship_Projects/: cpp.txt
Internship_Projects/Text-Based Adventure Game/: Text-Based-Adventure-Game.cpp
PhonebookApp/: .gitignore  CMakeLists.txt  CMakeLists_console.txt  PROJECT_STATUS.md  README.md  SETUP.md  console_demo.cpp
PhonebookApp/resources/: resources.qrc
PhonebookApp/src/: main.cpp
PhonebookApp/src/core/: BST.cpp  BST.h  Contact.cpp  Contact.h  ContactManager.cpp  ContactManager.h  FileHandler.cpp  FileHandler.h  SearchSort.cpp  SearchSort.h  ThreadPool.cpp  ThreadPool.h
PhonebookApp/src/db/: Database.cpp  Database.h
PhonebookApp/src/gui/: MainWindow.cpp  MainWindow.h
PhonebookApp/src/utils/: Config.h  Logger.cpp  Logger.h
PhonebookApp/tests/: test_bst.cpp  test_contacts.cpp  test_database.cpp  test_filehandler.cpp
Simple Calendar Application/: Simple-Calendar-Application.cpp
merit/: BUBBLESORT (2).cpp  Stackalloperation.cpp  linkedlis.cpp  null
oopc-plus/: encapsulation
